--- a/MealPrep/Views/Shared/_Layout.cshtml
+++ b/MealPrep/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AvaliableMeals" asp-action="Index">Avaliable Meals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MyMeals" asp-action="Index">My Meals</a>
+                        </li>
                     </ul>
                 </div>
             </div>
