carousel images added

--- a/MealPrep/Views/Home/Index.cshtml
+++ b/MealPrep/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Some Highlights:</p>
+    <div class="carousel slide" data-ride="carousel" data-interval="2000">
+        <div class="carousel-inner">
+            <div class="carousel-item active">...</div>
+            <div class="carousel-item">...</div>
+            <div class="carousel-item">...</div>
+        </div>
+    </div>
 </div>
