--- a/MealPrep/Views/Home/Index.cshtml
+++ b/MealPrep/Views/Home/Index.cshtml
@@ -1,21 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Some Highlights:</p>
-    <div class="carousel slide" data-ride="carousel" data-interval="100">
-        <div class="carousel-inner">
-            <div class="carousel-item active"><img src="./images/1.jpeg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/2.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/3.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/4.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/5.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/6.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/7.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/8.jpg" alt="¯\_(ツ)_/¯" /></div>
-            <div class="carousel-item"><img src="./images/9.jpg" alt="¯\_(ツ)_/¯" /></div>
-        </div>
-    </div>
+    <partial name="_Carousel"></partial>
 </div>
