--- a/MealPrep/Views/MyMeals/Create.cshtml
+++ b/MealPrep/Views/MyMeals/Create.cshtml
@@ -38,8 +38,8 @@
                     
                 }
                 -->
-                <option value="Pizza"> Pizza </option>
-                <option value="Grilled Cheese"> Grilled Cheese </option>
+                <option value="Roast Steak"> Roast Steak </option>
+                <option value="Ice Cream"> Ice Cream </option>
             </select>
             <span asp-validation-for="Title" class=" text-danger"></span>
         </div>
