finished edit and delete. working on stretched pictures

--- a/MealPrep/Views/MyMeals/Create.cshtml
+++ b/MealPrep/Views/MyMeals/Create.cshtml
@@ -40,6 +40,7 @@
                 -->
                 <option value="Roast Steak"> Roast Steak </option>
                 <option value="Ice Cream"> Ice Cream </option>
+                <option value="Burrito"> Burrito </option>
             </select>
             <span asp-validation-for="Title" class=" text-danger"></span>
         </div>
