--- a/MealPrep/Views/MyMeals/Index.cshtml
+++ b/MealPrep/Views/MyMeals/Index.cshtml
@@ -34,8 +34,8 @@
                         @meal.Notes
                     </td>
                     <td>
-                        @*<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>*@
+                        <a asp-action="Delete" asp-route-id="@meal.Id" class="btn btn-danger btn-sm">Delete</a>
+                <a asp-action="Edit" asp-route-id="@meal.Id" class="btn btn-success btn-sm text-white">Edit</a>
                     </td>
                 </tr>
             }
