Edited css and will work on adding meals to db

--- a/MealPrep/Views/AvaliableMeals/Index.cshtml
+++ b/MealPrep/Views/AvaliableMeals/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model IEnumerable<Meal>
 <h2>Avaliable Meals</h2>
 
+<div class="row row-cols-3">
 @foreach (var meal in Model)
 {
 
     <partial name="MealCard" model="meal" />
 }
+</div>
