--- a/MealPrep/Views/Shared/MealCard.cshtml
+++ b/MealPrep/Views/Shared/MealCard.cshtml
@@ -3,7 +3,7 @@
     <div class="thumbnail">
         <h3>@Model.Title</h3>
         <img src="@Model.ImageUrl" alt="" />
-        <div class="caption">
+        <div class="caption my-3">
             <p>@Model.Description</p>
         </div>
         <!--
