--- a/MealPrep/Views/MyMeals/Delete.cshtml
+++ b/MealPrep/Views/MyMeals/Delete.cshtml
@@ -6,7 +6,7 @@
 <br />
 <h3 class="custom-text">Delete Confirmation</h3>
 <div class="alert alert-danger">
-    <h3>Are you sure you want to delete this meal plan?</h3>
+    <h3>Are you sure you want to delete this meal from the meal plan?</h3>
     <form asp-action="Delete" method="post">
         <input type="hidden" />
         <input type="submit" value="Delete" class="btn btn-danger" />
