--- a/MealPrep/wwwroot/css/site.css
+++ b/MealPrep/wwwroot/css/site.css
@@ -45,11 +45,11 @@ body {
 .thumbnail > img {
     display: block;
     width: 100%;
-    height: 200px;
+    height: auto;
 }
 
 .caption {
-    height: 130px;
+    /*height: 130px;*/
     overflow: hidden
 }
 
