--- a/MealPrep/Views/Shared/_Carousel.cshtml
+++ b/MealPrep/Views/Shared/_Carousel.cshtml
@@ -1,28 +1,52 @@
 ﻿<div class="row carousel-holder">
     <div class="col-md-12">
-        <div class="carousel slide" id="mycarousel" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#mycarousel" data-slide-to="1"></li>
-                <li data-target="#mycarousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active"><img src="./images/1.jpeg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/2.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/3.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/4.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/5.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/6.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/7.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/8.jpg" alt="¯\_(ツ)_/¯" /></div>
-                <div class="carousel-item"><img src="./images/9.jpg" alt="¯\_(ツ)_/¯" /></div>
+        <div class="carousel slide" id="mycarousel" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="1"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="2"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="3"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="4"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="5"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="6"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="7"></button>
+                <button data-bs-target="#mycarousel" data-bs-slide-to="8"></button>
             </div>
-            <a class="float-start carousel-control" href="#mycarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="float-end carousel-control" href="#mycarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+            <div class="carousel-inner">
+                <div class="carousel-item active"><div class="frame"><img src="./images/1.jpeg" alt="¯\_(ツ)_/¯" /></div></div>
+                <div class="carousel-item">
+                    <div class="frame"><img src="./images/2.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                    <div class="carousel-item">
+                    <div class="frame"><img src="./images/3.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                        <div class="carousel-item">
+                    <div class="frame"><img src="./images/4.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                            <div class="carousel-item">
+                    <div class="frame"><img src="./images/5.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                                <div class="carousel-item">
+                    <div class="frame"><img src="./images/6.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                                    <div class="carousel-item">
+                    <div class="frame"><img src="./images/7.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                                        <div class="carousel-item">
+                    <div class="frame"><img src="./images/8.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+                                            <div class="carousel-item">
+                    <div class="frame"><img src="./images/9.jpg" alt="¯\_(ツ)_/¯" /></div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#mycarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#mycarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 </div>
